Анимация клика и всплывающее окно

--- a/src/app/components/habit-list/habit-list.html
+++ b/src/app/components/habit-list/habit-list.html
@@ -53,3 +53,5 @@
     <button mat-button color="warn" (click)="deleteHabit(habit.id)">Удалить</button>
   </mat-card-actions>
 </mat-card>
+
+<app-celebration></app-celebration>
